Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84124

QColorDialog Native gives wrong RGB values

    XMLWordPrintable

Details

    • macOS
    • b7a1bd306443e4f932a96020c1d48418916237ea (qt/qtbase/dev) ae57f1003166e277b2bbe7f7490ecdb1fad3ab83 (qt/qtbase/5.15)

    Description

      Picked color from RGB sliders of native color dialog returns incorrect value.
      Attached example and screen recording.

      Attachments

        1. qtbug84124.tar.gz
          3 kB
        2. rgb.mov
          7.01 MB
        3. screenshot-1.png
          screenshot-1.png
          671 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes