macOS: Make getColor() return generic RGB components

Discard the color space and return the selected RGB/CMYK
color components, without any color space conversion.

This enables predictable color handling as long as you
stay on a single display. All color triplets are display
RGB: drawing the QColor returned by getColor() will
reproduce the selected color on-screen.

(Predictable color across multiple displays require
color management, which is out of scope here).

Fixes: QTBUG-84124
Change-Id: I43d8dc15d07635fabdd0662c84f7c0b5ac40b7ab
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit b7a1bd306443e4f932a96020c1d48418916237ea)
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>