src/plugins/platforms/cocoa/qcocoacolordialoghelper.mm
@@ -180,34 +180,34 @@ QT_NAMESPACE_ALIAS_OBJC_CLASS(QNSColorPanelDelegate);
 
 - (void)updateQtColor
 {
-    NSColor *color = [mColorPanel color];
-    NSString *colorSpaceName = [color colorSpaceName];
-    if (colorSpaceName == NSDeviceCMYKColorSpace) {
+    // Discard the color space and pass the color components to QColor. This
+    // is a good option as long as QColor is color-unmanaged: we preserve the
+    // exact RGB value from the color picker, which is predictable. Further,
+    // painting with the color will reproduce the same color on-screen, as
+    // long as the the same screen is used for selecting the color.
+    NSColor *componentColor = [[mColorPanel color] colorUsingType:NSColorTypeComponentBased];
+    switch (componentColor.colorSpace.colorSpaceModel)
+    {
+    case NSColorSpaceModelGray: {
+        CGFloat white = 0, alpha = 0;
+        [componentColor getWhite:&white alpha:&alpha];
+        mQtColor.setRgbF(white, white, white, alpha);
+    } break;
+    case NSColorSpaceModelRGB: {
+        CGFloat red = 0, green = 0, blue = 0, alpha = 0;
+        [componentColor getRed:&red green:&green blue:&blue alpha:&alpha];
+        mQtColor.setRgbF(red, green, blue, alpha);
+    } break;
+    case NSColorSpaceModelCMYK: {
         CGFloat cyan = 0, magenta = 0, yellow = 0, black = 0, alpha = 0;
-        [color getCyan:&cyan magenta:&magenta yellow:&yellow black:&black alpha:&alpha];
+        [componentColor getCyan:&cyan magenta:&magenta yellow:&yellow black:&black alpha:&alpha];
         mQtColor.setCmykF(cyan, magenta, yellow, black, alpha);
-    } else if (colorSpaceName == NSCalibratedRGBColorSpace || colorSpaceName == NSDeviceRGBColorSpace)  {
-        CGFloat red = 0, green = 0, blue = 0, alpha = 0;
-        [color getRed:&red green:&green blue:&blue alpha:&alpha];
-        mQtColor.setRgbF(red, green, blue, alpha);
-    } else if (colorSpaceName == NSNamedColorSpace) {
-        NSColor *tmpColor = [color colorUsingColorSpaceName:NSCalibratedRGBColorSpace];
-        CGFloat red = 0, green = 0, blue = 0, alpha = 0;
-        [tmpColor getRed:&red green:&green blue:&blue alpha:&alpha];
-        mQtColor.setRgbF(red, green, blue, alpha);
-    } else {
-        NSColorSpace *colorSpace = [color colorSpace];
-        if ([colorSpace colorSpaceModel] == NSCMYKColorSpaceModel && [color numberOfComponents] == 5){
-            CGFloat components[5];
-            [color getComponents:components];
-            mQtColor.setCmykF(components[0], components[1], components[2], components[3], components[4]);
-        } else {
-            NSColor *tmpColor = [color colorUsingColorSpaceName:NSCalibratedRGBColorSpace];
-            CGFloat red = 0, green = 0, blue = 0, alpha = 0;
-            [tmpColor getRed:&red green:&green blue:&blue alpha:&alpha];
-            mQtColor.setRgbF(red, green, blue, alpha);
-        }
+    } break;
+    default:
+        qWarning("QNSColorPanelDelegate: Unsupported color space model");
+    break;
     }
+
     if (mHelper)
         emit mHelper->currentColorChanged(mQtColor);
 }
